updating chapters + changepoint

--- a/1-introduction.qmd
+++ b/1-introduction.qmd
@@ -9,6 +9,8 @@ format:
       - right=20mm
     toc: true
     tof: true
+    lof: true
+    lot: true
     number-sections: true
     colorlinks: true
     include-in-header:
@@ -130,6 +132,26 @@ The epidemiological data, however, consistently implicate malaria as the commone
 
 #### Malaria
 
+**Introduction:** Invasive non-typhoidal Salmonella (iNTS) disease is a high-burden disease of African children, with highest incidence in children under 5 years (1,2). The World Health Organization (WHO) recognises iNTS as a top-10 vaccine priority for Africa. Understanding the role of maternally acquired immunity in protection against invasive disease is vital in understanding natural protection against invasive disease and guiding vaccine strategies, including considerations for the potential role for maternal vaccines. Malaria has been associated with increased risk of developing invasive NTS disease in children (3,4), which has been proposed to impair the innate, humoral and cell-mediated immune responses against NTS (5,6). Immunoglobulin-gamma (IgG) antibodies against NTS lipopolysaccharide (LPS) have been associated with protection against iNTS (7), and are being currently investigated as a potential correlate of protection for clinical vaccine trials.
+
+However, little attention has been paid to the role malaria may have on maternally acquired immunity. Placental malaria has been associated with impaired transplacental transfer of antibodies to a range of vaccine preventable infections (8–13), although the association has been inconsistent across studies. The seroepidemiology in Africa of iNTS study has recruited mother and infant pairs from areas of varying malaria transmission intensity in southern Malawi, which has shown infants under 4 months from high malaria transmission areas have lower S. typhimurium O-antigen immunoglobulin-gamma (IgG) concentrations than infants from low malaria transmission areas. This important finding requires further study to collect further meta-data on other potential confounding factors and to test additional samples from a separate cohort of mother and infant pairs with known malaria status, to validate this finding.
+
+**Background:** Placental malaria ^8–10,14,15^, HIV ^8–13^ and hypergammaglobulinemia have been shown to impair transplacental IgG transfer for a range of vaccine preventable infections ^16^ including measles and tetanus antibodies ^14^, influenza ^10^, RSV ^17^, group B Streptococcus ^13^,
+
+Across a range of studies HIV-positive pregnant women have been shown to have lower pathogen-specific antibody titres during pregnancy compared to HIV-negative pregnant women, as well impaired transplacental transfer, with resulting lower mean cord-to-maternal titre ratios (CMR), lower mean antibody concentration and/or higher proportion of infants below protective antibody thresholds compared to infants of HIV-negative women^8–13^. One proposed mechanism is impaired maternal immunity leading to lower maternal antibodies. HIV impacts B-Cell activity and maternal immune response to infection and vaccination but has also been shown to cause inflammation of the placenta which may impact antibody transfer. Hypergammaglobulinemia has also been linked to reduction in transplacental transfer of antibodies. Both HIV and malaria have been associated with B-cell defects including overproduction of total IgG through polyclonal B-cell activation ^18,19^.
+
+Findings have been less consistent between the association of malaria in pregnancy with impaired transplacental transfer compared to the associations seen with HIV, from studies showing strong associations of lower infant pathogen-specific antibody levels for measles, varicella, Hib, *S*. pneumoniae, and tetanus ^8–10,14,15^, but not seen with influenza ^10^ and variable association seen in RSV  ^20^.
+
+Placental malaria may impair antibody transfer directly due to parasitic infection at the placental interface through inflammation, interference with placental architecture impacting on surface area which can additionally lead to intrauterine growth restriction and pre-term birth ^21^. Similarly to HIV, hypergammaglobulinaemia appears to play a key role ^17,22^. A Gambian study found both hypergammaglobulinaemia of pathogen-specific antibodies and placental malaria were associated with large reductions in transplacental antibody transfer measles antibody, but not tetanus antibody ^14^. The same Gambian study found placental malaria specifically impaired the transfer of IgG1, IgG2, and IgG4, but not IgG3 ^23^, whereas maternal hypergammaglobulinaemia impaired transfer of only IgG1, IgG2. It is proposed that in hypergammaglobulinaemic states, high levels of non-specific and low-quality IgG are generated, saturating the finite number of Fc receptors at the placental surface, or outcompeting other IgG with lower affinity for FcRn ^17,23,24^. There is growing evidence that hypergammaglobulinaemia is the underlying mechanism for impaired transplacental transfer of antibodies, which may be independent, or induced by infections such as malaria and HIV, and historical associations of malaria and HIV with reduced antibody transfer may be confounded by hypergammaglobulinaemia ^25,26^.
+
+Unravelling the effects of HIV, placental malaria and hypergammaglobulinaemia from further confounding factors such as geographic location. In settings such as the Gambia, there was a high prevalence of hypergammaglobulinemia and placental malaria ^14,23^ (95% of mothers had both), however in a study in Papua New Guinea only 56% of mothers had both ^27^. In the Papua New Guinea study high maternal total IgG was associated with impaired transplacental transfer of antibodies, however, placental malaria was not, and further analysis supported this finding ^25^. The prevalence of hypergammaglobulinaemia is not well documented, particularly in LMICs, and causes are poorly understood. Hypergammaglobulinaemia is associated with several chronic infections HIV, placental malaria, but also with arsenic exposure ^28^.
+
+Preterm delivery has been associated with reduced transplacental transfer of antibodies for measles, rubella, varicella zoster, mumps, Haemophilus influenzae B (Hib), diphtheria, tetanus toxoid, pertussis, and polio ^29^. Birthweight has also been associated with reduce antibody transfer although the underlying pathophysiology may be multifactorial (associated with preterm birth, placental infection etc). Other factors such as maternal age, weight, parity, type of delivery, nutritional status and smoking status have been evaluated for association with placental antibody transfer, but few have found convincing associations. Only one study found increasing transfer of anti-RSV antibodies with increasing parity.
+
+Few studies have studied the transplacental transfer of NTS-specific antibodies;  in Vietnamese mother-child dyads ^30^, highly efficient transfer of NTS O antigen–specific antibodies was seen. However, this study did not present data on maternal co-morbidities that may impact antibody transfer such as malaria or HIV.
+
+The seroepidemiology (SAiNTS) study comprises a community cohort of 2400 children ages 0-5 years in a malaria-endemic Chikwawa in Southern Malawi. Paired serology samples tested for IgG to O-Ag to *S.* Typhimurium and *S.* Enteriditis (main serovars causing invasive NTS disease) as well as data on malaria status (Malaria Rapid Diagnostic Test and blood film), and other risk factors for iNTS including anaemia, malnutrition and sickle cell disease. Additionally, samples were collected from xx mother and infant (\<6 month) pairs.
+
 #### Anaemia
 
 #### Severe Acute Malnutrition
@@ -140,17 +162,31 @@ The epidemiological data, however, consistently implicate malaria as the commone
 
 ## Public Health interventions for iNTS
 
-Feasey modelling risks/ papers from attrib risks
+Declines in iNTS disease in children have been associated with improvements in malaria control in the Gambia, Kenya, and Tanzania (3,14,15), however, there is uncertainty about whether these associations are causal and therefore the extent to which malaria control will reduce iNTS disease incidence. Several ecological studies have explored associations between host factors and iNTS disease at a population level. Feasey *et al.* (7) used structural equation modelling to examine associations between malaria, SAM, and HIV with NTS bloodstream infections over a period of 10 years and found that iNTS declined by 11.8% annually over this period, while malaria incidence fell by 36% in the first two years, then stabilised, while admissions for SAM by declined by 5.8% per year. Statistically significant direct effects on iNTS disease from malaria and SAM (regression coefficients 0.56 and 0.20 respectively), as well as direct and indirect effects of HIV on iNTS disease through SAM (0.25 and 1.33 respectively), and indirect effect of rainfall (via effects on malaria and SAM). Declines in iNTS disease during this period may have been associated with successful antiretroviral, malaria, and malnutrition programs. Tack *et al.* (16) used principal components analysis and multivariate time series regression to examine associations of environmental and host factors on the seasonal dynamics of iNTS disease in the Democratic Republic of Congo, and found significant associations of iNTS disease with SAM with an incidence rate ratio (IRR) of 1.09 (95% CI: 1.01-1.17), malaria and anaemia combined with an IRR of 1.3 (95% CI 1.2 – 1.41), and direct effects of rainfall with an IRR of 1.13 (95% CI 1.04 – 1.21).
 
 ## Assessing iNTS disease burden
 
 ### Blood culture surveillance
 
+Blood culture remains the gold standard diagnostic method for invasive salmonellosis, and existing surveillance depends on blood culture. Blood culture surveillance depends on clinical presentation to a health facility with blood culture facilities, which depends on health-seeking behaviors and availability of health facilities. Blood cultures demand a microbiological laboratory with sufficient resources, often in wealthier urban settings, and is not available in many parts of the world, particularly in the areas with the most at risk populations in impoverished communities in sub-Saharan Africa. Therefore the disease burden of invasive salmonellosis in many regions of the world is unknown. Blood culture has a high specificity, but a moderate sensitivity, particularly in young children where low sample volumes can reduce the sensitivity further \[ref\]. Exposure to antibiotics prior to having blood cultures taken can reduce sensitivity further. Blood cultures requires venous sampling which can be challenging in infants and people presenting in extremis including shock. There is also a risk of contamination if sterile technique is not observed, which can be challenging in many settings that do not have sufficient resources for hand hygiene and sterile equipment - this can lead to overgrowth with skin contaminants and reduce ability to detect salmonella??? \[ref\]. As a result blood culture surveillance significantly underestimates the incidence of invasive salmonellosis as illustrated by the surveillance pyramid [@fig-pyramid]. The degree of underestimation of incidence is likely to be much larger in typhoid, compared to iNTS due to the more severe presentation of INTS, and as a result higher presentation to health facilities. However, due to the high case fataility of iNTS, it likely a significant proportion don't make it to health facilities before death, also contributing to underestimation of disease. Many authors have reported adjusted estimates for typhoid incidence accounting for blood culture sensitivity and health-seeking behaviour [@meiring_burden_2021], however, this has not been done consistently for iNTS due to concerns that health-seeking behaviour is not as much of a concern for iNTS.
+
+Existing estimates of global incidence for iNTS disease have been based on systematic reviews inlcuding one carried out within of the Global Burden of Diseases Study (2017) [@stanaway_global_2019-1], which included studies from 1980-2017 that contained information on iNTS disease incidence, defining a case of iNTS disease as culture-confirmed NTS infection of a normally sterile site (eg, blood). A more recent systematic review was conducted by Marchello et al. [@marchello_incidence_2021], funded as part of an EU-funded consortium to develop iNTS vaccines. Stanaway et al. included 35 studies in the incidence estimates, and included hospital or clinic-based studies that made adjustments in their reported estimates for incomplete case finding and to the underlying catchment population. They did not include adjustments for health-seeking behaviour as this data was mainly available from household surveys of milder febrile illnesses. They used a Bayesian methods to fit geographical multi-level models to extrapolate incidence across geographic regions. Highest incidence of disease was reported in sub-Saharan Africa 34·5 (26·6 to 45·0) cases per 100,000, and highest in
+
+Previous data from Malawi has shown that iNTS disease peaked in Malawi in 2002 reaching epidemic incidence of 242 cases per 100,000 population [@feasey_three_2015], and has been steadiliy declining to 6.9 per 100,000 in 2019 [@wilson_incidence_2022].
+
 ### Serosurveillance
 
-Seroepi uses in other pathogens
+It is important to have high resolution regional data to inform vaccine implementation for both typhoid conjugate vaccines and development and evaluation of iNTS vaccines. Countries require granular evidence of disease burden in order to receive funding support from Gavi the Vaccine Alliance. Seroepidemiology uses antibody responses in the population to estimate disease burden \[Ref\]. It is employed for a range of pathogens including ......\[ref\].
+
+New approaches have been developed for estimating the burden of typhoid [@aiemjoy_estimating_2022] using IgG against hemolysin E (HlyE) which is a pore-forming toxin produced only by salmonella typhi and paratyphi, and not found in other salmonella species, which reduces cross-reactivity that reduces the specificity of other antibody markers such as IgG against LPS. Antibodies detected in individuals in the population represent exposure to a pathogen presenting that specific antigen at some time in the past, regardless of symptoms. Seroprevalance can be measured in a population by carrying out a cross-sectional serosurvey at a single point in time. Seroincidence can be estimated by measuring increases in antibody between two time points, indicating new infections occuring in this period. It can be difficult to define cut-offs to define seropositive and seronegative individuals, as the distribution of antibodies in the population is rarely bimodal, and standard reference cut-off values have not been identified. Waning antibodies over time can contribute to the difficulties in distinguishing between exposed and unexposed individuals. Variation in antibody levels with age make cut-offs even more challenging, particularly in high transmission settings, where children may rapidly reach a plateau of antibody levels [@nyirenda_sequential_2014] due to frequent exposure to pathogens in early life, which may or may not reflect symptomatic illness. This challenge exists to a greater extent with NTS where there are many salmonella subspecies within the same serogroup not associated with inavsive disease, that may induce cross-protection, but will overestimate the exposure to invasive serovars in the population. Techniques recently developed for estimating typhoid seroincidence for typhoid, using antibody decay kinetics to interpret
+
+Methods to estimate NTS seroincidence in low transmission settings, based on antibody decay profiles in culture-confirmed salmonella infections have been used in developed countries, where invasive disease is rarely seen [@falkenhorst_serological_2012]. However, this method is more difficult to apply to settings with high force of infection, where antibody levels can quickly reach a saturation point in early childhood.
+
+![Surveillance capture pyramid, where the base represents all infections and the apex represents culture-positive cases detected at surveillance sites. Reproduced from [@aiemjoy2023]](1_images/surveillance%20pyramid.png){#fig-pyramid width="564"}
 
 ### Environmental surveillance
+
+Environmental surveillance has been proposed as a method to identify high burden sites for Typhoid Conjugate Vaccine (TCV), to complement blood culture and serosurveillance [@andrews_validation_2003]. Environmental surveillance requires the collection of enviromental samples from a range of sources including drinking water, sewage, air, or formites and using microbiological and molecular methods to screen for pathogens.
 
 ### Impact of SARS-COV2
 
@@ -180,13 +216,19 @@ Progress in controlling iNTS infections are hampered by non-specific clinical pr
 
 There is no currently licensed vaccine available against iNTS disease. There are three iNTS vaccines that are in early clinical or pre-clinical development. One is a trivalent lipopolysaccharide-flagellin conjugate, targeting typhoid and the 2 commonest iNTS serovars in Africa (Typhimurium and Enteritidis) developed by the Centre for Vaccine Development, Baltimore, which is currently in Wellcome-Trust-funded Phase 1 clinical trials in the US and Mali (13). A second is another trivalent conjugate vaccine developed by the International Vaccine Institute (IVI) and supported by Wellcome Innovations an earlier pre-clinical stage of development. The third is a novel parenteral bivalent iNTS vaccine based on Generalized Modules for Membrane Antigens (GMMA), also targeting serovars Typhimurium and Enteritidis (14).
 
+A WHO Technical Advisory Group (TAG) on Salmonella vaccination has recently been formed, with a strategic emphasis on Salmonella combination vaccines.(22) The leading candidate NTS vaccines that have commenced phase 2 studies include Generalised Modules of Membrane Antigen (GMMA) technology(23) and OAg/FliC conjugate(24), including bivalent (STm and SEn) and trivalent co-formulations (with TCV). All candidates present OAg and additional potential protein antigens.(22) PAiNTS will strategically leverage available data and samples from 3 ongoing phase 1&2 trials of GMMA-containing vaccines in adults and children, in endemic and non-endemic populations (Supplementary table F), by collaborative agreement with investigators, sponsors and funders.
+
 ### iNTS vaccine clinical trials and assessing vaccine efficacy
 
-### Correlates of protection
+### Controlled Human Infection Model (CHIM)
+
+We have recently established an iNTS CHIM, to prospectively identify protective correlates after exposure/infection with a standardised infective dose.(21) The ongoing proof-of-principle study compares single-dose oral challenge using a well-characterised “African adapted” ST313 STm strain (D23580) against a “diarrhoeal” ST19 strain (4/74). Encouragingly, we have observed bacteraemia and persistent fever in our preliminary cohorts, alongside reliable rates of gastrointestinal carriage, indicating that this model will provide insights relevant to iNTS disease (Supplementary Panel E). In this proposal, we will move forward to an infection-reinfection challenge to establish evidence of protection following exposure/infection.
+
+A well-designed CHIM study can play a strategic role in accelerating vaccine development. Notably, the WHO Strategic Advisory Group of Experts on Immunisation recommendation and pre-qualification of typhoid conjugate vaccines (TCV) was supported by CHIM data, and phase-3 efficacy studies for TCVs used anti-Vi IgG ELISA as their immunogenicity endpoint, generating further evidence for TCV introduction, despite uncertainties around its exact mechanistic role or final protective thresholds.(18,19) We aim to use the iNTS CHIM, combined with data from endemic settings, to build a scientific case for CoPs based on naturally-derived immunity. This will be aligned with vaccine-induced immunity to support vaccine licensure. \### Correlates of protection
 
 Other vaccines licenced on correlates e.g. pneumo/ menigo SBA/IgG
 
-Co-correlates/ functional correlates
+### Co-correlates/ functional correlates
 
 The gold standard for vaccine licensure and policy decisions are double-blind placebo-controlled randomized trials to determine vaccine efficacy with clinical endpoints. However, this can be prohibitively expensive and impractical, requiring very large sample sizes if the clinical endpoint is uncommon and expensive to diagnose, as is the case for iNTS. Immune Correlates of Protection (CoP) can accelerate the development of vaccines, providing non-clinical pivotal end points in vaccine studies (15, 16). CoP can be defined as immune markers shown to correlate statistically with a reduced risk of disease (17). CoPs have been key in licencing several vaccines, including meningococcal C conjugate vaccine in the UK in 1999, A serogroup A meningococcal polysaccharide-tetanus toxoid conjugate vaccine in India in 2009, and MenB-4C in Europe in 2013 (15). Sero-epidemiology studies are being used currently to identify an antibody CoP in GBS vaccination development (15).
 
