--- a/2-methods.qmd
+++ b/2-methods.qmd
@@ -9,6 +9,8 @@ format:
       - right=20mm
     toc: true
     tof: true
+    lof: true
+    lot: true
     number-sections: true
     colorlinks: true
     include-in-header:
@@ -149,7 +151,7 @@ We searched for data relating to blood culture confirmed invasive non-typhoidal 
 Keywords are noted in regular type, ‘MESH’ (Medical subject heading) terms in bold.
 
 |     | **Search 1: Non-typhoidal Salmonella**                                                                                                                                                                  |     |
-|--------|--------------------------------------------------------|--------|
+|-----|---------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------|-----|
 |     | salmonella\* OR salmonellosis OR typhimurium OR enteritidis OR nontyph\* OR non-typh\* OR "Salmonella newport" OR "Salmonella heidelberg" OR NTS OR iNTS                                                |     |
 |     | **Search 2: Invasive disease**                                                                                                                                                                          |     |
 |     | bacteraemi\* OR bacteremi\* OR septicaemi\* OR septicemi\* OR septic OR sepsis OR blood isolate OR bloodstream OR invasive                                                                              |     |
@@ -163,7 +165,7 @@ Keywords are noted in regular type, ‘MESH’ (Medical subject heading) terms i
 **Scopus search strategy**
 
 |     | TITLE-ABS-KEY                                                                                                                                                                                        |     |
-|--------|--------------------------------------------------------|--------|
+|-----|------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------|-----|
 |     | **Search 1: Non-typhoidal Salmonella**                                                                                                                                                               |     |
 |     | salmonella\* OR salmonellosis OR typhimurium OR enteritidis OR nontyph\* OR non-typh\* OR "Salmonella newport" OR "Salmonella heidelberg" OR NTS OR iNTS                                             |     |
 |     | **Search 2: Invasive disease**                                                                                                                                                                       |     |
@@ -178,7 +180,7 @@ Keywords are noted in regular type, ‘MESH’ (Medical subject heading) terms i
 **Web of science search strategy**
 
 |     | **Search 1: Non-typhoidal Salmonella**                                                                                                                                                                  |     |
-|--------|--------------------------------------------------------|--------|
+|-----|---------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------|-----|
 |     | salmonella\* OR salmonellosis OR typhimurium OR enteritidis OR nontyph\* OR non-typh\* OR "Salmonella newport" OR "Salmonella heidelberg" OR NTS OR iNTS                                                |     |
 |     | **Search 2: Invasive disease**                                                                                                                                                                          |     |
 |     | bacteraemi\* OR bacteremi\* OR septicaemi\* OR septicemi\* OR septic OR sepsis OR blood isolate OR bloodstream OR invasive                                                                              |     |
@@ -216,7 +218,7 @@ The quality of individual studies was assessed using the modified Newcastle-Otta
 Odds ratios (OR) for odds of iNTS for each host factor group were calculated from 2 by 2 tables, as was the prevalence of exposure in cases and controls, using the formula OR = A x D/ B X C.
 
 |     | **Exposure**             |     | **iNTS Positive** |     | **iNTS Negative** |     |
-|----------|------------|----------|----------|----------|----------|----------|
+|-----|--------------------------|-----|-------------------|-----|-------------------|-----|
 |     | **Host factor Positive** |     | A                 |     | B                 |     |
 |     | **Host factor Negative** |     | C                 |     | D                 |     |
 
